--- a/static/index.html
+++ b/static/index.html
@@ -73,7 +73,7 @@
                 zip_code: parseInt(document.getElementById('zip_code').value)
             };
 
-            const response = await fetch("http://127.0.0.1:8000/predict", {
+            const response = await fetch("https://ml-2-dmlg.onrender.com/predict", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json"
